updated index file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
-            background-color: #f4f4f9;
+            background-color: #fffaf3;
             color: #333;
             margin: 0;
             padding: 0;
@@ -57,50 +57,95 @@
         #message {
             display: none;
             margin-top: 30px;
-            font-size: 18px;
-            padding: 20px;
-            background-color: #ffcccc;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background-color: #ffe6e6;
+            padding: 30px;
+            border-radius: 20px;
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+            animation: fadeIn 2s ease-in-out;
         }
-        .confetti {
+        #message h2 {
+            color: #ff6b6b;
+        }
+        #animated-heart {
+            display: none;
+            margin: 20px auto;
+            width: 150px;
+            height: 150px;
+            position: relative;
+        }
+        #animated-heart::before,
+        #animated-heart::after {
+            content: '';
+            width: 150px;
+            height: 150px;
+            background-color: #ff6b6b;
+            border-radius: 50%;
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            overflow: hidden;
+            animation: pulse 2s infinite;
         }
-        .confetti div {
+        #animated-heart::after {
+            left: auto;
+            right: 0;
+        }
+        #heart-shape {
+            width: 150px;
+            height: 150px;
+            background-color: #ff6b6b;
+            transform: rotate(-45deg);
             position: absolute;
-            width: 10px;
-            height: 10px;
-            background-color: #f9ca24;
-            animation: fall 3s linear infinite;
+            top: 50px;
+            left: 50px;
         }
-        @keyframes fall {
-            0% {
-                transform: translateY(-100vh) rotate(0deg);
-                opacity: 1;
+        #heart-shape::before,
+        #heart-shape::after {
+            content: '';
+            width: 100px;
+            height: 100px;
+            background-color: #ff6b6b;
+            border-radius: 50%;
+            position: absolute;
+        }
+        #heart-shape::before {
+            top: -50px;
+            left: 25px;
+        }
+        #heart-shape::after {
+            top: 25px;
+            left: -50px;
+        }
+
+        @keyframes pulse {
+            0%, 100% {
+                transform: scale(1);
             }
-            100% {
-                transform: translateY(100vh) rotate(360deg);
-                opacity: 0.3;
+            50% {
+                transform: scale(1.1);
+            }
+        }
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
             }
         }
     </style>
 </head>
 <body>
     <h1>For You, My Love ❤️</h1>
-    <p>Match all the cards before the time runs out to unlock a surprise!</p>
+    <p>Match all the cards to reveal a surprise just for you!</p>
     <div id="timer">Time: <span id="time">60</span> seconds</div>
     <div id="game-container"></div>
     <div id="message">
         <h2>You Did It! 🎉</h2>
-        <p>Every moment with you is a gift, and today’s another reason I’m lucky to have you. You’re my favorite player in the game of life. I love you more than words can say! 💕</p>
+        <div id="animated-heart">
+            <div id="heart-shape"></div>
+        </div>
+        <p>You are my heart, my everything. Thank you for being the light of my life. I love you more than words can ever express! ❤️</p>
     </div>
-    <div class="confetti" id="confetti"></div>
 
     <script>
         const cards = [
@@ -112,7 +157,7 @@
         const gameContainer = document.getElementById("game-container");
         const message = document.getElementById("message");
         const timerElement = document.getElementById("time");
-        const confetti = document.getElementById("confetti");
+        const animatedHeart = document.getElementById("animated-heart");
         let flippedCards = [];
         let matchedCount = 0;
         let timeLeft = 60;
@@ -155,7 +200,7 @@
                         clearInterval(timer);
                         setTimeout(() => {
                             message.style.display = "block";
-                            startConfetti();
+                            animatedHeart.style.display = "block";
                         }, 500);
                     }
                 } else {
@@ -181,15 +226,6 @@
             }, 1000);
         }
 
-        function startConfetti() {
-            for (let i = 0; i < 100; i++) {
-                const particle = document.createElement("div");
-                particle.style.left = `${Math.random() * 100}%`;
-                particle.style.animationDelay = `${Math.random() * 2}s`;
-                confetti.appendChild(particle);
-            }
-        }
-
         function setupGame() {
             shuffle(cards);
             cards.forEach(symbol => {
@@ -203,4 +239,3 @@
     </script>
 </body>
 </html>
-
