--- a/index.html
+++ b/index.html
@@ -135,8 +135,10 @@
     </style>
 </head>
 <body>
-    <h1>For You, My Love ❤️</h1>
-    <p>Match all the cards to reveal a surprise just for you!</p>
+    <h1>For Puchuuuuuuuuu, My Love ❤️</h1>
+    <p>Match all the cards to reveal a surprise just for you!
+        My guluuuuu, my sundruuuuu my babayyyyy
+    </p>
     <div id="timer">Time: <span id="time">60</span> seconds</div>
     <div id="game-container"></div>
     <div id="message">
