--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         }
         h1 {
             margin-top: 20px;
+            font-size: 24px;
+        }
+        p {
+            font-size: 16px;
+            margin: 10px 20px;
         }
         #game-container {
             display: grid;
@@ -132,13 +137,56 @@
                 opacity: 1;
             }
         }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 20px;
+            }
+            p {
+                font-size: 14px;
+            }
+            #game-container {
+                grid-template-columns: repeat(4, 80px);
+                gap: 10px;
+            }
+            .card {
+                width: 80px;
+                height: 100px;
+                font-size: 20px;
+            }
+            #timer {
+                font-size: 16px;
+                padding: 8px 16px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 18px;
+            }
+            p {
+                font-size: 12px;
+                margin: 10px;
+            }
+            #game-container {
+                grid-template-columns: repeat(3, 70px);
+                gap: 8px;
+            }
+            .card {
+                width: 70px;
+                height: 90px;
+                font-size: 18px;
+            }
+            #timer {
+                font-size: 14px;
+                padding: 6px 12px;
+            }
+        }
     </style>
 </head>
 <body>
     <h1>For Puchuuuuuuuuu, My Love ❤️</h1>
-    <p>Match all the cards to reveal a surprise just for you!
-        My guluuuuu, my sundruuuuu my babayyyyy
-    </p>
+    <p>Match all the cards to reveal a surprise just for you! My guluuuuu, my sundruuuuu my babayyyyy</p>
     <div id="timer">Time: <span id="time">60</span> seconds</div>
     <div id="game-container"></div>
     <div id="message">
